--- a/src/post-py/Dockerfile
+++ b/src/post-py/Dockerfile
@@ -1,20 +1,12 @@
-FROM alpine:3.9
+FROM python:3.6.0-alpine
 
 WORKDIR /app
-COPY . /app
+ADD . /app
 
-RUN apk --no-cache --update add \
-        build-base \
-        python3 \
-        python3-dev \
-    && python3 -m ensurepip \
-    && pip3 install --no-cache-dir --upgrade \
-        pip \
-        setuptools \
-    && pip3 install --no-cache-dir -r /app/requirements.txt \
-    && apk del \
-        build-base \
-        python3-dev
+RUN apk --no-cache --update add build-base && \
+    pip3 install --upgrade pip && \
+    pip3 install -r /app/requirements.txt && \
+    apk del build-base
 
 ENV POST_DATABASE_HOST post_db
 ENV POST_DATABASE posts
