HW docker-4. Try-1

--- a/src/ui/Dockerfile
+++ b/src/ui/Dockerfile
@@ -1,16 +1,21 @@
-FROM ubuntu:16.04
-RUN apt-get update \
-    && apt-get install -y ruby-full ruby-dev build-essential --force-yes \
-    && gem install bundler --no-ri --no-rdoc
+FROM alpine:3.9
 
 ENV APP_HOME /app
 RUN mkdir $APP_HOME
 
 WORKDIR $APP_HOME
-ADD Gemfile* $APP_HOME/
-##ADD . $APP_HOME
-RUN bundle install
-ADD . $APP_HOME
+COPY Gemfile* $APP_HOME/
+RUN apk --no-cache --update add \
+        build-base \
+        ruby-dev \
+        ruby-full \
+    && gem install bundler:1.17.2 --no-document \
+    && bundle install \
+    && apk del \
+        build-base \
+        ruby-dev
+
+COPY . $APP_HOME
 
 ENV POST_SERVICE_HOST post
 ENV POST_SERVICE_PORT 5000
