--- a/src/ui/Dockerfile.0
+++ b/src/ui/Dockerfile.0
@@ -1,16 +1,16 @@
 FROM ubuntu:16.04
 RUN apt-get update \
-    && apt-get install -y ruby-full ruby-dev build-essential --force-yes \
-    && gem install bundler --no-ri --no-rdoc
+    && apt-get install --no-install-recommends -y ruby-full ruby-dev build-essential \
+    && gem install bundler --no-ri --no-rdoc \
+    && rm -rf /var/lib/apt/lists/*
 
 ENV APP_HOME /app
 RUN mkdir $APP_HOME
 
 WORKDIR $APP_HOME
-ADD Gemfile* $APP_HOME/
-##ADD . $APP_HOME
+COPY Gemfile* $APP_HOME/
 RUN bundle install
-ADD . $APP_HOME
+COPY . $APP_HOME
 
 ENV POST_SERVICE_HOST post
 ENV POST_SERVICE_PORT 5000
