--- a/src/ui/Dockerfile.2
+++ b/src/ui/Dockerfile.2
@@ -1,12 +1,13 @@
 FROM ruby:2.2-alpine
 
-RUN apk --no-cache --update add build-base=0.4-r1
-
 ENV APP_HOME /app
 RUN mkdir $APP_HOME
 
 WORKDIR $APP_HOME
 COPY Gemfile* $APP_HOME/
+RUN apk --no-cache --update add build-base=0.4-r1 \
+  && bundle install \
+  && apk del build-base
 RUN bundle install
 COPY . $APP_HOME
 
